--- a/project/ontheroad/index.html
+++ b/project/ontheroad/index.html
@@ -11,7 +11,7 @@
 	</style>
 </head>
 <body>
-	<div id="loading-panel" class="active">
+	<div id="loading-panel" class="loading-panel active">
 		<div class="boy-panel">
 			<div class="boy dark"></div>
 		</div>
